# Norwa_Doc_Sign

./: README.md  pyproject.toml
fixtures/: custom_field.json
norwa_doc_sign/: apps.txt  hooks.py  modules.txt  requirements.txt  setup.py
norwa_doc_sign/._pkg_final/doctype/signature_capture/: signature_capture.json  signature_capture.py
norwa_doc_sign/._pkg_final/doctype/signature_selection/: signature_selection.json
norwa_doc_sign/._pkg_final/utils/: image_utils.py
norwa_doc_sign/._tmp_pkg/: hooks.py
norwa_doc_sign/._tmp_pkg/doctype/company_stamp/: company_stamp.py
norwa_doc_sign/._tmp_pkg/doctype/signature_selection/: signature_selection.py
norwa_doc_sign/._tmp_pkg/utils/: signatory.py
norwa_doc_sign/doctype/document_sign_request/: document_sign_request.json  document_sign_request.py
norwa_doc_sign/doctype/document_signature_position/: document_signature_position.json
norwa_doc_sign/norwa_doc_sign/: hooks.py
norwa_doc_sign/norwa_doc_sign/doctype/company_stamp/: company_stamp.json
norwa_doc_sign/norwa_doc_sign/doctype/document_signature_position/: document_signature_position.json
norwa_doc_sign/norwa_doc_sign/doctype/signatory_mapping/: signatory_mapping.json
norwa_doc_sign/norwa_doc_sign/public/js/: doc_sign.js  form_ext.js
norwa_doc_sign/norwa_doc_sign/utils/: signatory.py
norwa_doc_sign/public/js/: doc_sign.js  form_ext.js
norwa_doc_sign/utils/: image_utils.py  signatory.py
